<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">News</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="about">About</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="loading">Loading...</string>
    <string name="news_detail">News detail</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="news_open_alert">News Open alert</string>
    <string-array name="news_open_mode">
        <item>Web View</item>
        <item>System browser</item>
    </string-array>
    <string name="news_read_mode">Read mode</string>
    <string name="news_update">News update</string>
    <string name="news_update_time">News update time</string>
    <string-array name="select_news_update_time">
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hour</item>
        <item>10 s</item>
    </string-array>
    <string name="news_url">News url</string>
    <string name="comment">Comment</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="comment_success">Comment success!</string>
    <string name="write_comment">Write comment</string>
    <string name="author">Author:</string>
    <string name="edition">Edition:</string>
    <string name="author_name">HDW</string>
</resources>
